Bug 1363116 - Remove the report{ExtraWarning,StrictMode}ErrorNumberVA wrappers in EitherParser. r=arai

Copy construction for va_list is implementation dependent, and most
likely doesn't actually work properly on some platforms. While the
wrapping in EitherParser might currently work on tier-1 platforms,
it also triggers a warning on newer GCC versions that could very well
indicate that they might not work entirely properly. Mixing va_list,
copy construction and templates variadics surely sounds like something
very fragile.

While I understand that the pending changes from bug 1351107 might be
relying on the current state of the code, I'd rather that bug be
reworked so as to please newer versions of GCC than having to figure out
what parts of that bug are still relevant after bug 1351105 and blocking
bug 1389435 further.